[FIX] Scrollbar and styles mat-panel select

--- a/BudgetApp.Frontend/src/app/components/select-filter/select-filter.component.scss
+++ b/BudgetApp.Frontend/src/app/components/select-filter/select-filter.component.scss
@@ -1,4 +1,4 @@
-:host {
+.mat-input-auto-fill  {
     display: flex;
     position: relative;
     width: 100%;
@@ -6,4 +6,27 @@
     justify-content: flex-start;
     align-items: center;
     padding: 12px 16px;
+}
+
+.mat-select-panel {
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+    overflow-x: hidden !important;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #ccc; 
+    border-radius: 5px;
 }
